--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="author" content="Nick Richards">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <title>Index</title>
 </head>
 <body>
+    <h1>Page 1</h1>
     
 </body>
 </html>
