adding folders and files for index page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Nick Richards">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <title>Index</title>
-</head>
-<body>
-    <h1>Page 1</h1>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Nick Richards" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta
+      name="description"
+      content="Assignment portal for Nick 'Richards in WDD 230: Web Frontend Development at Brigham Young University - Idaho"
+    />
+    <title>WDD 230: Assignment Portal</title>
+    <link rel="stylesheet" href="/styles/stylesheet.css" />
+    <!-- <link rel="JavaScript" href="/scripts/script.js"> -->
+  </head>
+  <body>
+    <div class="main">
+      <div class="box">
+        <header>
+          <div class="row">
+            <div class="column">
+              <img
+                src="./images/nickPicOptimized.jpeg"
+                alt="picture of man"
+                class="picture"
+              />
+            </div>
+            <h1>Nick Richards</h1>
+          </div>
+        </header>
+      </div>
+      <h2>WDD 230: Assignment Portal</h2>
+      <div class="bulletList">
+        <ol>
+          <li class="lesson">Lesson 1 <a href="" class="link">Title</a></li>
+          <li class="lesson">Lesson 2 <a href="" class="link">Title</a></li>
+          <li class="lesson">Lesson 3 <a href="" class="link">Title</a></li>
+          <li class="lesson">Lesson 4 <a href="" class="link">Title</a></li>
+          <li class="lesson">Lesson 5 <a href="" class="link">Title</a></li>
+          <li class="lesson">Lesson 6 <a href="" class="link">Title</a></li>
+          <li class="lesson">Lesson 7 <a href="" class="link">Title</a></li>
+          <li class="lesson">Lesson 8 <a href="" class="link">Title</a></li>
+          <li class="lesson">Lesson 9 <a href="" class="link">Title</a></li>
+          <li class="lesson">Lesson 10 <a href="" class="link">Title</a></li>
+          <li class="lesson">Lesson 11 <a href="" class="link">Title</a></li>
+          <li class="lesson">Lesson 12 <a href="" class="link">Title</a></li>
+        </ol>
+      </div>
+    </div>
+    <footer>
+      &copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah <br />
+      Last Updated: <span id="year2"></span>
+    </footer>
+    <script src="/scripts/script.js"></script>
+  </body>
 </html>
