--- a/index.html
+++ b/index.html
@@ -16,22 +16,23 @@
   </head>
   <body>
     <div class="main">
-      <div class="box">
+      <div class="container">
         <header>
-          <div class="row">
-            <div class="column">
-              <img
-                src="./images/nickPicOptimized.jpeg"
-                alt="picture of man"
-                class="picture"
-              />
+          <div class="container_image">
+            <img
+              src="./images/nickPicOptimized.jpeg"
+              alt="picture of man"
+              class="picture"
+            />
+            <div class="title_container">
+              <h1>Nick Richards</h1>
             </div>
-            <h1>Nick Richards</h1>
           </div>
         </header>
       </div>
       <h2>WDD 230: Assignment Portal</h2>
       <div class="bulletList">
+        <hr>
         <ol>
           <li class="lesson">Lesson 1 <a href="" class="link">Title</a></li>
           <li class="lesson">Lesson 2 <a href="" class="link">Title</a></li>
@@ -46,11 +47,15 @@
           <li class="lesson">Lesson 11 <a href="" class="link">Title</a></li>
           <li class="lesson">Lesson 12 <a href="" class="link">Title</a></li>
         </ol>
+        <hr>
       </div>
     </div>
     <footer>
-      &copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah <br />
-      Last Updated: <span id="year2"></span>
+      <div class="footer1">
+        &copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah
+      </div>
+
+      <div class="footer2">Last Updated: <span id="year2"></span></div>
     </footer>
     <script src="/scripts/script.js"></script>
   </body>
