adjusting link to css document

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       content="Assignment portal for Nick 'Richards in WDD 230: Web Frontend Development at Brigham Young University - Idaho"
     />
     <title>WDD 230: Assignment Portal</title>
-    <link rel="stylesheet" href="/styles/stylesheet.css" />
+    <link rel="stylesheet" href="./styles/stylesheet.css" />
     <!-- <link rel="JavaScript" href="/scripts/script.js"> -->
   </head>
   <body>
