--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
 
       <div class="footer2">Last Updated: <span id="year2"></span></div>
     </footer>
-    <script src="/scripts/script.js"></script>
+    <script src="/wdd230/scripts/script.js"></script>
   </body>
 </html>
