converting image format, removing containers, adding css measurement changes

--- a/index.html
+++ b/index.html
@@ -1,62 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Nick Richards" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
-    <meta
-      name="description"
-      content="Assignment portal for Nick 'Richards in WDD 230: Web Frontend Development at Brigham Young University - Idaho"
-    />
-    <title>WDD 230: Assignment Portal</title>
-    <link rel="stylesheet" href="./styles/stylesheet.css" />
-    <!-- <link rel="JavaScript" href="/scripts/script.js"> -->
-  </head>
-  <body>
-    <div class="main">
-      <div class="container">
-        <header>
-          <div class="container_image">
-            <img
-              src="./images/nickPicOptimized.jpeg"
-              alt="picture of man"
-              class="picture"
-            />
-            <div class="title_container">
-              <h1>Nick Richards</h1>
-            </div>
-          </div>
-        </header>
-      </div>
-      <h2>WDD 230: Assignment Portal</h2>
-      <div class="bulletList">
-        <hr>
-        <ol>
-          <li class="lesson">Lesson 1 <a href="" class="link">Title</a></li>
-          <li class="lesson">Lesson 2 <a href="" class="link">Title</a></li>
-          <li class="lesson">Lesson 3 <a href="" class="link">Title</a></li>
-          <li class="lesson">Lesson 4 <a href="" class="link">Title</a></li>
-          <li class="lesson">Lesson 5 <a href="" class="link">Title</a></li>
-          <li class="lesson">Lesson 6 <a href="" class="link">Title</a></li>
-          <li class="lesson">Lesson 7 <a href="" class="link">Title</a></li>
-          <li class="lesson">Lesson 8 <a href="" class="link">Title</a></li>
-          <li class="lesson">Lesson 9 <a href="" class="link">Title</a></li>
-          <li class="lesson">Lesson 10 <a href="" class="link">Title</a></li>
-          <li class="lesson">Lesson 11 <a href="" class="link">Title</a></li>
-          <li class="lesson">Lesson 12 <a href="" class="link">Title</a></li>
-        </ol>
-        <hr>
-      </div>
-    </div>
-    <footer>
-      <div class="footer1">
-        &copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah
-      </div>
 
-      <div class="footer2">Last Updated: <span id="year2"></span></div>
-    </footer>
-    <script src="/wdd230/scripts/script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Nick Richards" />
+  <meta name="keywords" content="HTML, CSS, JavaScript" />
+  <meta name="description"
+    content="Assignment portal for Nick 'Richards in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
+  <title>WDD 230: Assignment Portal Nick Richards</title>
+  <link rel="stylesheet" href="/styles/stylesheet.css" />
+</head>
+
+<body>
+  <header class="container">
+    <div class="container_image">
+      <img src="./images/nickPic.webp" alt="picture of man" class="picture" />
+      <h1>Nick Richards</h1>
+    </div>
+  </header>
+  <h2>WDD 230: Assignment Portal</h2>
+  <div class="bulletList">
+    <hr>
+    <ol>
+      <li class="lesson">Lesson 1 <a href="" class="link">Title</a></li>
+      <li class="lesson">Lesson 2 <a href="" class="link">Title</a></li>
+      <li class="lesson">Lesson 3 <a href="" class="link">Title</a></li>
+      <li class="lesson">Lesson 4 <a href="" class="link">Title</a></li>
+      <li class="lesson">Lesson 5 <a href="" class="link">Title</a></li>
+      <li class="lesson">Lesson 6 <a href="" class="link">Title</a></li>
+      <li class="lesson">Lesson 7 <a href="" class="link">Title</a></li>
+      <li class="lesson">Lesson 8 <a href="" class="link">Title</a></li>
+      <li class="lesson">Lesson 9 <a href="" class="link">Title</a></li>
+      <li class="lesson">Lesson 10 <a href="" class="link">Title</a></li>
+      <li class="lesson">Lesson 11 <a href="" class="link">Title</a></li>
+      <li class="lesson">Lesson 12 <a href="" class="link">Title</a></li>
+    </ol>
+    <hr>
+
+  </div>
+  <footer>
+    <div class="footer1">
+      &copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah
+    </div>
+
+    <div class="footer2">Last Updated: <span id="year2"></span></div>
+  </footer>
+  <script src="/wdd230/scripts/script.js"></script>
+</body>
+
 </html>
