adjusting link for css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description"
     content="Assignment portal for Nick 'Richards in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
   <title>WDD 230: Assignment Portal Nick Richards</title>
-  <link rel="stylesheet" href="/styles/stylesheet.css" />
+  <link rel="stylesheet" href="styles/stylesheet.css" />
 </head>
 
 <body>
