--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <title>WDD 230: Assignment Portal Nick Richards</title>
     <link rel="stylesheet" href="styles/normalize.css" />
-    <!-- <link rel="stylesheet" href="styles/stylesheet.css" /> -->
+    <link rel="stylesheet" href="styles/stylesheet.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -33,7 +33,7 @@
       <hr />
       <ol>
         <li class="lesson">Lesson 1 <a href="" class="link">Title</a></li>
-        <li class="lesson">Lesson 2 <a href="" class="link">Title</a></li>
+        <li class="lesson">Lesson 2 <a href="lesson2/design-principles.html" class="link">Title</a></li>
         <li class="lesson">Lesson 3 <a href="" class="link">Title</a></li>
         <li class="lesson">Lesson 4 <a href="" class="link">Title</a></li>
         <li class="lesson">Lesson 5 <a href="" class="link">Title</a></li>
