added images for site, updated readme with image help, added html for containers

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -1,23 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Design principles</title>
-    <link rel="stylesheet" href="styles/stylesheet.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/stylesheet.css" />
+  </head>
+  <body>
     <div class="row">
-        <div class="column" style="background-color:#aaa;">
-          <h2>Column 1</h2>
-          <p>Some text..</p>
-        </div>
-        <div class="column" style="background-color:#bbb;">
-          <h2>Column 2</h2>
-          <p>Some text..</p>
-        </div>
+      <div class="column" style="background-color: #aaa">
+        <h2>Visual Hierarchy</h2>
+        <p>PC Part Picker</p>
+        <a href="https://pcpartpicker.com/">pcpartpicker.com</a>
+        <img
+          src="images/PCpartPicker.webp"
+          alt="vertical picture of Personal Computer website"
+          width="100%"
+          height="100%"
+        />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem
+          ipsum dolor sit amet. Vulputate odio ut enim blandit volutpat maecenas
+          volutpat. Nullam eget felis eget nunc lobortis mattis aliquam. Laoreet
+          sit amet cursus sit amet dictum. Elementum pulvinar etiam non quam
+          lacus suspendisse. Faucibus turpis in eu mi bibendum. Cras pulvinar
+          mattis nunc sed blandit libero. Ut tortor pretium viverra suspendisse
+          potenti nullam ac. Diam donec adipiscing tristique risus nec feugiat
+          in fermentum posuere. Purus semper eget duis at tellus at urna.
+        </p>
+        <p>
+          Tellus in hac habitasse platea dictumst vestibulum rhoncus. Lacus
+          suspendisse faucibus interdum posuere. Interdum velit euismod in
+          pellentesque massa. Sagittis eu volutpat odio facilisis mauris sit
+          amet massa. Ut enim blandit volutpat maecenas volutpat. Suspendisse in
+          est ante in nibh. Aliquam etiam erat velit scelerisque in. Quis
+          eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. Ut
+          tristique et egestas quis ipsum. Platea dictumst vestibulum rhoncus
+          est
+        </p>
       </div>
-    
-</body>
+      <div class="column" style="background-color: #bbb">
+        <h2>White Space and Clean Design</h2>
+        <p>The Church of Jesus Christ of Latter-Day Saints</p>
+        <a href="https://www.churchofjesuschrist.org/?lang=eng">Church of Jesus Christ</a>
+        <img src="images/churchWebsite.webp" 
+            alt="vertical picture of church website"
+            width="100%"
+            height="100%">
+        <p></p>
+        <p></p>
+      </div>
+      <div class="column" style="background-color: #ccc">
+        <h2>Contrast</h2>
+        <p>Apple Inc.</p>
+        <a href="https://www.apple.com/">Apple Inc.</a>
+        <img src="images/appleWebsite.webp" 
+            alt="vertical picture of Apple Incorporated website"
+            width="100%"
+            height="100%">
+            <p></p>
+            <p></p>
+      </div>
+    </div>
+  </body>
 </html>
