adding text to descriptions

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -20,48 +20,48 @@
           height="100%"
         />
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem
-          ipsum dolor sit amet. Vulputate odio ut enim blandit volutpat maecenas
-          volutpat. Nullam eget felis eget nunc lobortis mattis aliquam. Laoreet
-          sit amet cursus sit amet dictum. Elementum pulvinar etiam non quam
-          lacus suspendisse. Faucibus turpis in eu mi bibendum. Cras pulvinar
-          mattis nunc sed blandit libero. Ut tortor pretium viverra suspendisse
-          potenti nullam ac. Diam donec adipiscing tristique risus nec feugiat
-          in fermentum posuere. Purus semper eget duis at tellus at urna.
-        </p>
-        <p>
-          Tellus in hac habitasse platea dictumst vestibulum rhoncus. Lacus
-          suspendisse faucibus interdum posuere. Interdum velit euismod in
-          pellentesque massa. Sagittis eu volutpat odio facilisis mauris sit
-          amet massa. Ut enim blandit volutpat maecenas volutpat. Suspendisse in
-          est ante in nibh. Aliquam etiam erat velit scelerisque in. Quis
-          eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis. Ut
-          tristique et egestas quis ipsum. Platea dictumst vestibulum rhoncus
-          est
+          the reason i chose this website is because it's about how to build a
+          PC and the first thing that it shows is "start your build" and the
+          very next portion is a series of guides that are great to assist the
+          user on how to build a PC and ensure that they have plenty of help in
+          the process. the other part of the site that i like is the nav bar at
+          the top that is present throughout. this allows the user to make sure
+          that they don't get lost on the page when it comes to navigation.
         </p>
       </div>
       <div class="column" style="background-color: #bbb">
         <h2>White Space and Clean Design</h2>
         <p>The Church of Jesus Christ of Latter-Day Saints</p>
-        <a href="https://www.churchofjesuschrist.org/?lang=eng">Church of Jesus Christ</a>
-        <img src="images/churchWebsite.webp" 
-            alt="vertical picture of church website"
-            width="100%"
-            height="100%">
-        <p></p>
-        <p></p>
+        <a href="https://www.churchofjesuschrist.org/?lang=eng"
+          >Church of Jesus Christ</a
+        >
+        <img
+          src="images/churchWebsite.webp"
+          alt="vertical picture of church website"
+          width="100%"
+          height="100%"
+        />
+        <p>
+          the great thing about the church website here is that it shows the
+          importance of having consistant white space while making the design
+          clean and the items centered and easy to read by the user
+        </p>
       </div>
       <div class="column" style="background-color: #ccc">
         <h2>Contrast</h2>
         <p>Apple Inc.</p>
         <a href="https://www.apple.com/">Apple Inc.</a>
-        <img src="images/appleWebsite.webp" 
-            alt="vertical picture of Apple Incorporated website"
-            width="100%"
-            height="100%">
-            <p></p>
-            <p></p>
+        <img
+          src="images/appleWebsite.webp"
+          alt="vertical picture of Apple Incorporated website"
+          width="100%"
+          height="100%"
+        />
+        <p>
+          Notice here that appl's website has both dark and light backgrounds
+          with images but the text is still easily readable. this site shows
+          great useage with contrast between text and the background and images.
+        </p>
       </div>
     </div>
   </body>
