--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Design principles</title>
+    <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/stylesheet.css" />
   </head>
   <body>
+    <header>
+      <h1>Design Principles Document</h1>
+      <h2>Nick Richards</h2>
+    </header>
+
     <div class="row">
       <div class="column" style="background-color: #aaa">
-        <h2>Visual Hierarchy</h2>
+        <h3>Visual Hierarchy</h3>
         <p>PC Part Picker</p>
         <a href="https://pcpartpicker.com/">pcpartpicker.com</a>
         <img
@@ -29,8 +35,8 @@
           that they don't get lost on the page when it comes to navigation.
         </p>
       </div>
-      <div class="column" style="background-color: #bbb">
-        <h2>White Space and Clean Design</h2>
+      <div class="column" style="background-color: #aaa">
+        <h3>White Space and Clean Design</h3>
         <p>The Church of Jesus Christ of Latter-Day Saints</p>
         <a href="https://www.churchofjesuschrist.org/?lang=eng"
           >Church of Jesus Christ</a
@@ -47,8 +53,8 @@
           clean and the items centered and easy to read by the user
         </p>
       </div>
-      <div class="column" style="background-color: #ccc">
-        <h2>Contrast</h2>
+      <div class="column" style="background-color: #aaa">
+        <h3>Contrast</h3>
         <p>Apple Inc.</p>
         <a href="https://www.apple.com/">Apple Inc.</a>
         <img
@@ -64,5 +70,13 @@
         </p>
       </div>
     </div>
+    <footer>
+      <div class="footer1">
+        &copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah
+      </div>
+
+      <div class="footer2">Last Updated: <span id="year2"></span></div>
+    </footer>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
