adding content for week 3 assignment for chamber of commerce site

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Assignment on website design principles at Brigham Young University - Idaho"
+    />
     <title>Design principles</title>
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/stylesheet.css" />
