added icon and image, also updated readme on where i got icon

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -32,9 +32,11 @@
     <div class="bulletList">
       <hr/>
     <h2>Domain Name</h2>
+    <p>kaysvillecity.org</p>
     <hr>
     <h2>Logo</h2>
     <hr>
+    <img src="/lesson3/images/gov-buildng-kaysville.png" alt="">
       <ol>
         <li class="lesson">Lesson 3 <a href="" class="link">Title</a></li>
       </ol>
