added text and styles with media queries

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -12,41 +12,34 @@
     />
     <title>Kaysville City Commerce</title>
     <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/stylesheet.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Noto+Serif+KR&family=Noto+Serif+SC&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="/lesson3/styles/stylesheet.css" />
   </head>
 
   <body>
     <header class="container">
-      <div class="container_image">
-        <img src="./images/nickPic.webp" alt="picture of man" class="picture" />
-        <h1>Nick Richards</h1>
-      </div>
+      <h1>Kaysville City Chamber of Commerce</h1>
     </header>
-    <h2>Kaysville City Chamber of Commerce site</h2>
-    <div class="bulletList">
-      <hr/>
-    <h2>Domain Name</h2>
-    <p>kaysvillecity.org</p>
-    <hr>
-    <h2>Logo</h2>
-    <hr>
-    <img src="/lesson3/images/gov-buildng-kaysville.png" alt="">
-      <ol>
-        <li class="lesson">Lesson 3 <a href="" class="link">Title</a></li>
-      </ol>
+    <nav>
+      <div><a href="index.html">Home</a></div>
+      <div><a href="color-scheme.html">Color Scheme</a></div>
+      <div><a href="target-audience.html">Target Audience</a></div>
+      <div><a href="typography.html">Typography</a></div>
+    </nav>
+    <div class="maincontent">
+      <h2>Site Name</h2>
+      <p>Kaysville City Chamber of Commerce</p>
       <hr />
+      <h2>Site Purpose</h2>
+      <p>the purpose of this site is to create a space to strengthen the local community for people and businesses alike. </p>
+      <h2>Domain Name</h2>
+      <p>kaysvillecitycommerce.org</p>
+      <h2>Logo</h2>
+      <img src="/lesson3/images/gov-buildng-kaysville.png" alt="" />
     </div>
     <footer>
       <div class="footer1">
         &copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah
       </div>
-
       <div class="footer2">Last Updated: <span id="year2"></span></div>
     </footer>
     <script src="/wdd230/scripts/script.js"></script>
