--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <ol>
         <li class="lesson">Lesson 1 <a href="" class="link">Title</a></li>
         <li class="lesson">Lesson 2 <a href="lesson2/design-principles.html" class="link">Design Principles</a></li>
-        <li class="lesson">Lesson 3 <a href="" class="link">Title</a></li>
+        <li class="lesson">Lesson 3 <a href="lesson3/index.html" class="link">Chamber of Commerce</a></li>
         <li class="lesson">Lesson 4 <a href="" class="link">Title</a></li>
         <li class="lesson">Lesson 5 <a href="" class="link">Title</a></li>
         <li class="lesson">Lesson 6 <a href="" class="link">Title</a></li>
