updated css link

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -12,7 +12,7 @@
     />
     <title>Kaysville City Commerce</title>
     <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="/lesson3/styles/stylesheet.css" />
+    <link rel="stylesheet" href="styles/stylesheet.css" />
   </head>
 
   <body>
