--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -34,7 +34,7 @@
       <h2>Domain Name</h2>
       <p>kaysvillecitycommerce.org</p>
       <h2>Logo</h2>
-      <img src="/lesson3/images/gov-buildng-kaysville.png" alt="" />
+      <img src="/gov-buildng-kaysville.png" alt="" />
     </div>
     <footer>
       <div class="footer1">
