adjusted closing tags and formatting

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Nick Richards" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
-    <meta
-      name="description"
-      content="a dummy site for the city of Kaysville Utah for school."
-    />
-    <title>Kaysville City Commerce</title>
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/stylesheet.css" />
-  </head>
 
-  <body>
-    <header class="container">
-      <h1>Kaysville City Chamber of Commerce</h1>
-    </header>
-    <nav>
-      <div><a href="index.html">Home</a></div>
-      <div><a href="color-scheme.html">Color Scheme</a></div>
-      <div><a href="target-audience.html">Target Audience</a></div>
-      <div><a href="typography.html">Typography</a></div>
-    </nav>
-    <div class="maincontent">
-      <h2>Site Name</h2>
-      <p>Kaysville City Chamber of Commerce</p>
-      <hr />
-      <h2>Site Purpose</h2>
-      <p>the purpose of this site is to create a space to strengthen the local community for people and businesses alike. </p>
-      <h2>Domain Name</h2>
-      <p>kaysvillecitycommerce.org</p>
-      <h2>Logo</h2>
-      <img src="./images/salt-lake-city.webp" alt="picture of state building" />
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Nick Richards">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="description" content="a dummy site for the city of Kaysville Utah for school.">
+  <title>Kaysville City Commerce</title>
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/stylesheet.css">
+</head>
+
+<body>
+  <header class="container">
+    <h1>Kaysville City Chamber of Commerce</h1>
+  </header>
+  <nav>
+    <div><a href="index.html">Home</a></div>
+    <div><a href="color-scheme.html">Color Scheme</a></div>
+    <div><a href="target-audience.html">Target Audience</a></div>
+    <div><a href="typography.html">Typography</a></div>
+  </nav>
+  <div class="maincontent">
+    <h2>Site Name</h2>
+    <p>Kaysville City Chamber of Commerce</p>
+    <hr />
+    <h2>Site Purpose</h2>
+    <p>the purpose of this site is to create a space to strengthen the local community for people and businesses alike.
+    </p>
+    <h2>Domain Name</h2>
+    <p>kaysvillecitycommerce.org</p>
+    <h2>Logo</h2>
+    <img src="./images/salt-lake-city.webp" alt="picture of state building" />
+  </div>
+  <footer>
+    <div class="footer1">
+      &copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah
     </div>
-    <footer>
-      <div class="footer1">
-        &copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah
-      </div>
-      <div class="footer2">Last Updated: <span id="year2"></span></div>
-    </footer>
-    <script src="/wdd230/scripts/script.js"></script>
-  </body>
+    <div class="footer2">Last Updated: <span id="year2"></span></div>
+  </footer>
+  <script src="/wdd230/scripts/script.js"></script>
+</body>
+
 </html>
