--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -1,47 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Nick Richards" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
-    <meta
-      name="description"
-      content="target audience page for the chamber of commerce site."
-    />
-    <title>Target Audience</title>
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/stylesheet.css" />
-  </head>
 
-  <body>
-    <header class="container">
-        <h1>Kaysville City Chamber of Commerce</h1>
-    </header>
-    <nav>
-      <div><a href="index.html">Home </a></div>
-      <div><a href="color-scheme.html">Color Scheme </a></div>
-      <div><a href="target-audience.html">Target Audience </a></div>
-      <div><a href="typography.html">Typography </a></div>
-    </nav>
-    <div class="maincontent">
-      <h2>Target Audience</h2>
-      <hr />
-      <p>The target audience is composed of both the business owners and residences in the local region.</p>
-      <h2>Personas</h2>
-      <hr />
-      <h2>Linda</h2>
-      <p>She is a Business owner of a local skate shop and is interested in contributing more to better her community with the younger generation. </p>
-      <h2>Fred</h2>
-      <p>He is the manager at the local library and wants to create a group of residents to help with increasing the amount of materials consumed by the local library by the residents.</p>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Nick Richards">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="description" content="target audience page for the chamber of commerce site.">
+  <title>Target Audience</title>
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/stylesheet.css">
+</head>
+
+<body>
+  <header class="container">
+    <h1>Kaysville City Chamber of Commerce</h1>
+  </header>
+  <nav>
+    <div><a href="index.html">Home </a></div>
+    <div><a href="color-scheme.html">Color Scheme </a></div>
+    <div><a href="target-audience.html">Target Audience </a></div>
+    <div><a href="typography.html">Typography </a></div>
+  </nav>
+  <div class="maincontent">
+    <h2>Target Audience</h2>
+    <hr />
+    <p>The target audience is composed of both the business owners and residences in the local region.</p>
+    <h2>Personas</h2>
+    <hr />
+    <h2>Linda</h2>
+    <p>She is a Business owner of a local skate shop and is interested in contributing more to better her community with
+      the younger generation. </p>
+    <h2>Fred</h2>
+    <p>He is the manager at the local library and wants to create a group of residents to help with increasing the
+      amount of materials consumed by the local library by the residents.</p>
+  </div>
+  <footer>
+    <div class="footer1">
+      &copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah
     </div>
-    <footer>
-      <div class="footer1">
-        &copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah
-      </div>
-      <div class="footer2">Last Updated: <span id="year2"></span></div>
-    </footer>
-    <script src="/wdd230/scripts/script.js"></script>
-  </body>
+    <div class="footer2">Last Updated: <span id="year2"></span></div>
+  </footer>
+  <script src="/wdd230/scripts/script.js"></script>
+</body>
+
 </html>
