--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Nick Richards" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
-    <meta
-      name="description"
-      content="the typography page for the chamber of commerce site"
-    />
-    <title>Typography</title>
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/stylesheet.css" />
-  </head>
 
-  <body>
-    <header class="container">
-        <h1>Kaysville City Chamber of Commerce</h1>
-    </header>
-    <nav>
-      <div><a href="index.html">Home </a></div>
-      <div><a href="color-scheme.html">Color Scheme </a></div>
-      <div><a href="target-audience.html">Target Audience </a></div>
-      <div><a href="typography.html">Typography </a></div>
-    </nav>
-    <div class="maincontent">
-      <h2>Typography</h2>
-      <hr>
-      <h2>Header and Footer</h2>
-      <p>Raleway Regular 400</p>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Nick Richards">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="description" content="the typography page for the chamber of commerce site">
+  <title>Typography</title>
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/stylesheet.css">
+</head>
 
-      <h2>H1-H2 Tags</h2>
-      <p>Lato Regular 400</p>
+<body>
+  <header class="container">
+    <h1>Kaysville City Chamber of Commerce</h1>
+  </header>
+  <nav>
+    <div><a href="index.html">Home </a></div>
+    <div><a href="color-scheme.html">Color Scheme </a></div>
+    <div><a href="target-audience.html">Target Audience </a></div>
+    <div><a href="typography.html">Typography </a></div>
+  </nav>
+  <div class="maincontent">
+    <h2>Typography</h2>
+    <hr>
+    <h2>Header and Footer</h2>
+    <p>Raleway Regular 400</p>
 
-      <h2>Fallback font</h2>
-      <p>DM Sans</p>
+    <h2>H1-H2 Tags</h2>
+    <p>Lato Regular 400</p>
+
+    <h2>Fallback font</h2>
+    <p>DM Sans</p>
+  </div>
+  <footer>
+    <div class="footer1">
+      &copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah
     </div>
-    <footer>
-      <div class="footer1">
-        &copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah
-      </div>
-      <div class="footer2">Last Updated: <span id="year2"></span></div>
-    </footer>
-    <script src="/wdd230/scripts/script.js"></script>
-  </body>
+    <div class="footer2">Last Updated: <span id="year2"></span></div>
+  </footer>
+  <script src="/wdd230/scripts/script.js"></script>
+</body>
+
 </html>
