more formatting changes

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -26,14 +26,14 @@
   <div class="maincontent">
     <h2>Site Name</h2>
     <p>Kaysville City Chamber of Commerce</p>
-    <hr />
+    <hr>
     <h2>Site Purpose</h2>
     <p>the purpose of this site is to create a space to strengthen the local community for people and businesses alike.
     </p>
     <h2>Domain Name</h2>
     <p>kaysvillecitycommerce.org</p>
     <h2>Logo</h2>
-    <img src="./images/salt-lake-city.webp" alt="picture of state building" />
+    <img src="./images/salt-lake-city.webp" alt="picture of state building">
   </div>
   <footer>
     <div class="footer1">
