--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -1,86 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Assignment on website design principles at Brigham Young University - Idaho"
-    />
-    <title>Design principles</title>
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/stylesheet.css" />
-  </head>
-  <body>
-    <header>
-      <h1>Design Principles Document</h1>
-      <h2>Nick Richards</h2>
-    </header>
 
-    <div class="row">
-      <div class="column" style="background-color: #aaa">
-        <h3>Visual Hierarchy</h3>
-        <p>PC Part Picker</p>
-        <a href="https://pcpartpicker.com/">pcpartpicker.com</a>
-        <img
-          src="images/PCpartPicker.webp"
-          alt="vertical picture of Personal Computer website"
-          width="100%"
-          height="100%"
-        />
-        <p>
-          the reason i chose this website is because it's about how to build a
-          PC and the first thing that it shows is "start your build" and the
-          very next portion is a series of guides that are great to assist the
-          user on how to build a PC and ensure that they have plenty of help in
-          the process. the other part of the site that i like is the nav bar at
-          the top that is present throughout. this allows the user to make sure
-          that they don't get lost on the page when it comes to navigation.
-        </p>
-      </div>
-      <div class="column" style="background-color: #aaa">
-        <h3>White Space and Clean Design</h3>
-        <p>The Church of Jesus Christ of Latter-Day Saints</p>
-        <a href="https://www.churchofjesuschrist.org/?lang=eng"
-          >Church of Jesus Christ</a
-        >
-        <img
-          src="images/churchWebsite.webp"
-          alt="vertical picture of church website"
-          width="100%"
-          height="100%"
-        />
-        <p>
-          the great thing about the church website here is that it shows the
-          importance of having consistant white space while making the design
-          clean and the items centered and easy to read by the user
-        </p>
-      </div>
-      <div class="column" style="background-color: #aaa">
-        <h3>Contrast</h3>
-        <p>Apple Inc.</p>
-        <a href="https://www.apple.com/">Apple Inc.</a>
-        <img
-          src="images/appleWebsite.webp"
-          alt="vertical picture of Apple Incorporated website"
-          width="100%"
-          height="100%"
-        />
-        <p>
-          Notice here that appl's website has both dark and light backgrounds
-          with images but the text is still easily readable. this site shows
-          great useage with contrast between text and the background and images.
-        </p>
-      </div>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Assignment on website design principles at Brigham Young University - Idaho">
+  <title>Design principles</title>
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/stylesheet.css">
+</head>
+
+<body>
+  <header>
+    <h1>Design Principles Document</h1>
+    <h2>Nick Richards</h2>
+  </header>
+
+  <div class="row">
+    <div class="column" style="background-color: #aaa">
+      <h3>Visual Hierarchy</h3>
+      <p>PC Part Picker</p>
+      <a href="https://pcpartpicker.com/">pcpartpicker.com</a>
+      <img src="images/PCpartPicker.webp" alt="vertical picture of Personal Computer website" width="100" height="100">
+      <p>
+        the reason i chose this website is because it's about how to build a
+        PC and the first thing that it shows is "start your build" and the
+        very next portion is a series of guides that are great to assist the
+        user on how to build a PC and ensure that they have plenty of help in
+        the process. the other part of the site that i like is the nav bar at
+        the top that is present throughout. this allows the user to make sure
+        that they don't get lost on the page when it comes to navigation.
+      </p>
     </div>
-    <footer>
-      <div class="footer1">
-        &copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah
-      </div>
+    <div class="column" style="background-color: #aaa">
+      <h3>White Space and Clean Design</h3>
+      <p>The Church of Jesus Christ of Latter-Day Saints</p>
+      <a href="https://www.churchofjesuschrist.org/?lang=eng">Church of Jesus Christ</a>
+      <img src="images/churchWebsite.webp" alt="vertical picture of church website" width="100" height="100">
+      <p>
+        the great thing about the church website here is that it shows the
+        importance of having consistant white space while making the design
+        clean and the items centered and easy to read by the user
+      </p>
+    </div>
+    <div class="column" style="background-color: #aaa">
+      <h3>Contrast</h3>
+      <p>Apple Inc.</p>
+      <a href="https://www.apple.com/">Apple Inc.</a>
+      <img src="images/appleWebsite.webp" alt="vertical picture of Apple Incorporated website" width="100" height="100">
+      <p>
+        Notice here that appl's website has both dark and light backgrounds
+        with images but the text is still easily readable. this site shows
+        great useage with contrast between text and the background and images.
+      </p>
+    </div>
+  </div>
+  <footer>
+    <div class="footer1">
+      &copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah
+    </div>
 
-      <div class="footer2">Last Updated: <span id="year2"></span></div>
-    </footer>
-    <script src="scripts/script.js"></script>
-  </body>
+    <div class="footer2">Last Updated: <span id="year2"></span></div>
+  </footer>
+  <script src="scripts/script.js"></script>
+</body>
+
 </html>
