--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 <body>
   <header class="container">
     <div class="container_image">
-      <img src="./images/nickPic.webp" alt="picture of man" class="picture" />
+      <img src="./images/nickPic.webp" alt="picture of man" class="picture">
       <h1>Nick Richards</h1>
     </div>
   </header>
   <h2>WDD 230: Assignment Portal</h2>
   <div class="bulletList">
-    <hr />
+    <hr>
     <ol>
       <li class="lesson">Lesson 1 <a href="" class="link">Title</a></li>
       <li class="lesson">
@@ -49,7 +49,7 @@
       <li class="lesson">Lesson 11 <a href="" class="link">Title</a></li>
       <li class="lesson">Lesson 12 <a href="" class="link">Title</a></li>
     </ol>
-    <hr />
+    <hr>
   </div>
   <footer>
     <div class="footer1">
