added js date correctly and added placeholder logo

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,6 +16,8 @@
 <body>
     <h1>Kaysville City Chamber of Commerce</h1>
     <header>
+        <div class="currentDate">Current Date: <span id="yearNow"></span> </div>
+        <img src="images/salt-lake-city.webp" alt="image of a state building"> <!-- this is the placeholder logo-->
         <ul>
             <nav>
                 <a href=""></a>
